# Nyx

./: .env.example  Cargo.toml  README.md  config.toml  docker-compose.yml  justfile
migrations/: 001_initial.sql
src/: config.rs  database.rs  encryption.rs  handlers.rs  main.rs
