[package]
name = "nyx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rsa = "0.9"
rand = "0.8"
base64 = "0.22"
anyhow = "1.0"
config = "0.14"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

